fixed a bug in progress bar (overflows)

--- a/src/app/sending-stage/sending-stage.component.css
+++ b/src/app/sending-stage/sending-stage.component.css
@@ -77,6 +77,6 @@
   justify-content: center;
   flex-direction: column;
   align-items: stretch;
-  width: 40rem;
+  width: 50%;
   margin: 2rem 1rem 3rem 1rem;
 }
